[package]
name = "aalo"
version = "0.0.0"
edition = "2021"
categories = ["asynchronous", "gui", "game-development"]
description = "aka bevy-inspector-haalka, a haalka port of bevy-inspector-egui"
exclude = ["assets/", ".github/", "crates/"]
keywords = ["bevy", "inspector", "ui", "gamedev", "signals"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databasedav/aalo"
documentation = "https://docs.rs/aalo"

[dependencies]
bevy = "0.14.1"
haalka = { path = "../haalka" }
# use this if remote
# haalka = { git = "https://github.com/databasedav/haalka", branch = "bevy_0.14" }
pretty-type-name = "1.0.1"
paste = "1.0.14"
nucleo-matcher = "0.3.1"

[dev-dependencies]
bevy-inspector-egui = "0.25"
strum = { version = "0.26", features = ["derive"] }

