[package]
name = "aalo"
version = "0.0.0"
edition = "2021"
categories = ["asynchronous", "gui", "game-development"]
description = "aka bevy-inspector-haalka, a haalka port of bevy-inspector-egui"
exclude = ["assets/", ".github/", "crates/"]
keywords = ["bevy", "inspector", "ui", "gamedev", "signals"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databasedav/aalo"
documentation = "https://docs.rs/aalo"

[dependencies]
bevy = "0.14"
# TODOTODO use this
# haalka = "0.2"
haalka = { path = "../haalka" }
disqualified = "1.0"
paste = "1.0"
nucleo-matcher = "0.3"
strum = { version = "0.26", features = ["derive"] }
num = "0.4"

[dev-dependencies]
bevy = { version = "0.14", features = ["bevy_dev_tools"] }
bevy-inspector-egui = "0.25"

